--- a/src/app/pages/chat/users/users-list/user/user.module.scss
+++ b/src/app/pages/chat/users/users-list/user/user.module.scss
@@ -3,6 +3,11 @@
 }
 .content-wrap {
     display: flex;
+    cursor: pointer;
+
+    &:hover {
+        background-color: rgba(0, 0, 0, 0.1);
+    }
 }
 
 .user {
