--- a/src/app/pages/chat/chat.module.scss
+++ b/src/app/pages/chat/chat.module.scss
@@ -3,10 +3,14 @@
 }
 .content-wrap {
     display: block;
-    max-width: 700px;
+    max-width: 800px;
     margin: auto;
 }
 
 .chat-wrap {
-    // background-color: goldenrod;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    height: 80vh;
+    margin-top: 5px;
 }
