fix: users-list

--- a/src/app/pages/chat/chat-block/chat-block.module.scss
+++ b/src/app/pages/chat/chat-block/chat-block.module.scss
@@ -43,7 +43,7 @@
 
 .dialog-window {
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: column;
     flex-grow: 1;
     overflow: scroll;
 }
