--- a/src/app/pages/chat/chat-block/chat-block.module.scss
+++ b/src/app/pages/chat/chat-block/chat-block.module.scss
@@ -44,6 +44,7 @@
 .dialog-window {
     display: flex;
     flex-direction: column;
+    justify-content: end;
     flex-grow: 1;
     overflow: scroll;
 }
