--- a/src/app/pages/chat/chat-block/chat-block.module.scss
+++ b/src/app/pages/chat/chat-block/chat-block.module.scss
@@ -46,11 +46,21 @@
     flex-direction: column;
     justify-content: end;
     flex-grow: 1;
-    overflow: scroll;
+    overflow: hidden;
+
+    div {
+        width: 100%;
+        overflow: scroll;
+    }
 }
 
 .empty-dialog {
     display: flex;
     justify-content: center;
     align-items: center;
+
+    div {
+        display: flex;
+        justify-content: center;
+    }
 }
