feat: edit message

--- a/src/app/pages/chat/chat-block/message/message.module.scss
+++ b/src/app/pages/chat/chat-block/message/message.module.scss
@@ -36,6 +36,11 @@
     align-self: flex-end;
 }
 
+.status-wrap {
+    display: flex;
+    justify-content: space-between;
+}
+
 .options-wrap {
     display: flex;
     height: 0;
