feat: add router guards

--- a/src/app/pages/about/about.html
+++ b/src/app/pages/about/about.html
@@ -1,6 +1,8 @@
 <h2>Fun chat</h2>
 
-<p class="{{description}}">The application is designed to demonstrate the Fun Chat assignment in the RSSchool JS/FE 2023Q3 course</p>
+<p class="{{description}}">
+    The application is designed to demonstrate the Fun Chat assignment in the RSSchool JS/FE 2023Q3 course
+</p>
 
 <a href="https://github.com/yauhenibelski" class="{{gh-link}}">
     <h4>Yauheni Belski</h4>
