--- a/src/app/core/popup/popup.module.scss
+++ b/src/app/core/popup/popup.module.scss
@@ -1,17 +1,13 @@
-.host {
-    display: block;
-}
-
-.content-wrap {
+.popup {
     display: flex;
     justify-content: center;
     align-items: center;
     position: fixed;
-    background-color: rgb(0 0 0 / 40%);
+    background-color: #00000021;
     right: 0px;
     left: 0px;
     top: 0px;
     bottom: 0px;
-    z-index: 3;
+    z-index: 10;
     transition: 0.2s;
 }
